<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >
    	<requestFocus />

    <EditText
        android:id="@+id/register_field_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/txt_alias"
        android:ems="10" />

    <EditText
        android:id="@+id/register_field_pass_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_field_email"
        android:layout_alignRight="@+id/register_field_email"
        android:layout_below="@+id/register_field_email"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_field_pass_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_field_pass_1"
        android:layout_alignRight="@+id/register_field_pass_1"
        android:layout_below="@+id/register_field_pass_1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_repassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_field_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_field_alias"
        android:layout_alignRight="@+id/register_field_alias"
        android:layout_below="@+id/register_field_alias"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/register_regbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_field_pass_2"
        android:layout_alignRight="@+id/register_field_pass_2"
        android:layout_below="@+id/register_field_pass_2"
        android:layout_marginTop="20dp"
        android:text="@string/txt_register" />

</RelativeLayout>
