<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    
    <ImageView
        android:id="@+id/login_img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/login_field_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_field_email"
        android:layout_alignRight="@+id/login_field_email"
        android:layout_below="@+id/login_field_email"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_label_regdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/txt_regacc_info"
        android:textColor="#1010FF"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_field_email"
        android:layout_alignRight="@+id/login_field_email"
        android:layout_below="@+id/login_field_password"
        android:layout_marginTop="32dp"
        android:text="@string/bt_login" />

    <EditText
        android:id="@+id/login_field_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_img_logo"
        android:layout_alignRight="@+id/login_img_logo"
        android:layout_below="@+id/login_img_logo"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
</RelativeLayout>
