<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileview_pagescroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    tools:context=".ProfileViewActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/profileview_avatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:maxHeight="130dp"
            android:maxWidth="130dp"
            android:minHeight="130dp"
            android:minWidth="130dp"
            android:contentDescription="@string/txt_profile_default_avatar"
            android:src="@drawable/contact_avatar" />

        <TextView
            android:id="@+id/profileview_alias"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/profileview_avatar"
            android:layout_toRightOf="@+id/profileview_avatar"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/profileview_age_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profileview_agelabel"
            android:layout_alignBottom="@+id/profileview_agelabel"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/profileview_agelabel"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_nationality_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_agelabel"
            android:layout_below="@+id/profileview_age_value"
            android:layout_marginTop="10dp"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_lookingfor_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profileview_lookingforlabel"
            android:layout_alignBottom="@+id/profileview_lookingforlabel"
            android:layout_alignLeft="@+id/profileview_agelabel"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_aboutlabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_lookingforlabel"
            android:layout_below="@+id/profileview_lookingforlabel"
            android:layout_marginTop="10dp"
            android:text="@string/txt_profile_default_about"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_about_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_aboutlabel"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/profileview_aboutlabel"
            android:layout_marginTop="3dp"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/profileview_physical_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/profileview_about_value"
            android:layout_marginTop="18dp"
            android:text="@string/txt_profile_default_phyinfo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/profileview_physical_section"
            android:layout_below="@+id/profileview_physical_section"
            android:background="#000000" />

        <TextView
            android:id="@+id/profileview_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_physical_section"
            android:layout_below="@+id/profileview_physical_section"
            android:layout_marginTop="14dp"
            android:text="@string/txt_profile_default_height"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_weightlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_height"
            android:layout_below="@+id/profileview_height"
            android:layout_marginTop="15dp"
            android:text="@string/txt_profile_default_weight"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_height_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profileview_height"
            android:layout_alignBottom="@+id/profileview_height"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/profileview_height"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_weight_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/profileview_weightlabel"
            android:layout_alignBottom="@+id/profileview_weightlabel"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/profileview_weightlabel"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_interests_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/profileview_weightlabel"
            android:layout_marginTop="19dp"
            android:text="@string/txt_profile_default_interests"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/profileview_interests_section"
            android:layout_below="@+id/profileview_interests_section"
            android:background="#000000" />

        <TextView
            android:id="@+id/profileview_interests_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_interests_section"
            android:layout_below="@+id/profileview_interests_section"
            android:layout_marginTop="16dp"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_agelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_alias"
            android:layout_below="@+id/profileview_gender_value"
            android:layout_marginTop="10dp"
            android:text="@string/txt_profile_default_age"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_lookingforlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/profileview_avatar"
            android:layout_below="@+id/profileview_avatar"
            android:layout_marginTop="10dp"
            android:text="@string/txt_profile_default_lookingfor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/profileview_gender_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileview_alias"
            android:layout_toRightOf="@+id/profileview_avatar"
            android:layout_marginTop="10dp"
            android:text="@string/txt_profile_default_unk"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</ScrollView>
